# Tarcza

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tarcza  collimator.yaml  driver  fart35.txt  input.yaml  main.cpp  makefile  mcnpsurfaces.txt  tarcza_validation.yaml
attenuation/: coefficients.h  coefficients_template.h  misc.cpp  pack.py  tester
attenuation/data/: Al_2.73.pl  Ge_5.323.pl  Pb_11.34.pl
core/: config.h  mcnpconvert.h  objparser.cpp  objparser.h  tracer.cpp  tracer.h  types.cpp  types.h
src/: CMakeLists.txt  helpers.h  main.cpp  main.py  objparser.cpp  objparser.h  tracer.cpp  types.h
src/matmath/: matmath.py
src/objparser/: parser.py
src/tracer/: tracer.py
